[package]
name = "dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
async-trait = "0.1.80"
indexmap = "2.2.6"
postgres = "0.19.7"
rusqlite = "0.31.0"
tokio = { version = "1.37.0", features = ["tokio-macros", "full"] }
tokio-postgres = "0.7.10"
