[package]
name = "dorm"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait = "0.1.80"
indexmap = "2.2.6"
postgres = "0.19.7"
rusqlite = "0.31.0"
tokio = { version = "1.37.0", features = ["tokio-macros", "full"] }
tokio-postgres = "0.7.10"
rust_decimal = { version = "1", features = ["db-diesel-postgres"] }
rust_decimal_macros = "1"

# [[example]]
# name = "basic-dorm"
# path = "examples/basic-dorm/src/main.rs"
