[package]
name = "bakery_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["macros"] }
bakery_model = { path = "../bakery_model" }
dorm = { path = "../dorm" }
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
fake = "3.0.1"
http-body-util = "0.1.2"
hyper = "1.5.1"
hyper-util = { version = "0.1.10", features = ["http1"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }

tower-test = "0.4.0"
tracing-subscriber = "0.3.19"
