[package]
name = "bakery_model"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.86"
dorm = { path = "../dorm" }
pretty_assertions = "1.4.0"
serde_json = "1.0.120"
testcontainers-modules = { version = "0.8.0", features = [
    "postgres",
    "blocking",
] }
tokio = "1.38.1"
tokio-postgres = "0.7.10"

[[example]]
name = "main"
path = "examples/main.rs"
