[package]
name = "bakery_model"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.86"
dorm = { path = "../dorm" }
pretty_assertions = "1.4.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.120"
testcontainers-modules = { version = "0.8.0", features = [
    "postgres",
    "blocking",
] }
tokio = "1.38.1"
tokio-postgres = "0.7.10"
sqlformat = "0.2.3"

[[example]]
name = "0-intro"
path = "examples/0-intro.rs"
