[package]
name = "dorm"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
rust_decimal = { version = "1", features = ["db-postgres"] }
async-trait = "0.1.80"
tokio-postgres = { version = "*", features = ["with-serde_json-1"] }
indexmap = { version = "2", features = ["serde"] }
rusqlite = "0.31.0"
tokio = { version = "1", features = ["full"] }
rust_decimal_macros = "1"
serde_json = { version = "1", features = [
    "preserve_order",
    "raw_value",
    "arbitrary_precision",
] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.38"
anyhow = "1.0.82"
futures = "0.3.30"
pretty_dbg = "1.0.54"
regex = "1.10.4"
sqlformat = "0.2.3"
syntect = "5.2.0"
lazy_static = "1.4.0"
cargo-nextest = { version = "0.9.72", features = [
    "experimental-tokio-console",
] }
pretty_assertions = "1.4.0"
testcontainers = "0.17.0"
testcontainers-modules = { version = "0.5.0", features = ["postgres"] }

[dev-dependencies]
bakery_model = { path = "../bakery_model" }

[[example]]
name = "basic-dorm"
path = "examples/basic-dorm/src/main.rs"

[[example]]
name = "query-builder"
path = "examples/query-builder/src/main.rs"

[[example]]
name = "very-basic-example"
path = "examples/very-basic-example/src/main.rs"
