[package]
name = "vantage"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Romans Malinovskis <me@nearly.guru>"]
description = "A type-safe, ergonomic database toolkit for Rust that focuses on developer productivity without compromising performance. It allows you to work with your database using Rust's strong type system while abstracting away the complexity of SQL queries."
documentation = "https://docs.rs/vantage"
homepage = "https://romaninsh.github.io/vantage"
repository = "https://github.com/romaninsh/vantage"
readme = "../README.md"

[lib]
doctest = false

[dependencies]
rust_decimal = { version = "1", features = ["db-postgres"] }
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
indexmap = { version = "2.2.6", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1", features = [
    "preserve_order",
    "raw_value",
    "arbitrary_precision",
] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.38"
anyhow = "1.0.82"
futures = "0.3.30"
sqlx = { version = "0.8.2", features = ["json", "postgres", "sqlite"], default-features = false }
tracing = "0.1.41"
env_logger = "0.11.5"
log = "0.4.22"

[dev-dependencies]
pretty_assertions = "1.4.0"
# syntect = "5.2.0"
# cargo-nextest = { version = "0.9.72", features = [ "experimental-tokio-console", ] }

[features]
